<resources>
    <string name="app_name">Best Choice</string>
    <string name="facebook_app_id">754690065012554</string>
    <string name="avatar_image">TODO</string>
    <string name="bangxephang">BẢNG XẾP HẠNG</string>
    <string name="diamond1">2000</string>
    <string name="avartar">HUY NGUYEN</string>
    <string name="diamond_image">TODO</string>
    <string name="bestchoice_imd">TODO</string>
    <string name="dangky">Đăng ký</string>
    <string name="repass">Nhập lại mật khẩu</string>
    <string name="pass">Mật khẩu</string>
    <string name="email1">Email</string>
    <string name="tendangnhap1">Tên đăng nhập</string>
    <string name="btn_dangnhap">Đăng nhập</string>
    <string name="tendangnhap2">Tên đăng nhập</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="createacc">Tạo một tài khoản mới</string>
    <string name="quenmk">Quên mật khẩu ?</string>
    <string name="avatar">TODO</string>
    <string name="name1">HUY NGUYEN</string>
    <string name="diamond2">2000</string>
    <string name="lichsu">LỊCH SỬ CHƠI</string>
    <string name="diamond_view">TODO</string>
    <string name="tk">TÀI KHOẢN</string>
    <string name="lichsuchoi">LỊCH SỬ</string>
    <string name="diamond">2000</string>
    <string name="name2">HUY NGUYEN</string>
    <string name="muacredit">MUA CREDIT</string>
    <string name="xephang">XẾP HẠNG</string>
    <string name="diamonds">1000</string>
    <string name="pad">100</string>
    <string name="caud">Nhà Tây Sơn</string>
    <string name="cauc">Các chúa Nguyễn</string>
    <string name="caub">Triều Hồ</string>
    <string name="caua">Triều Ngô</string>
    <string name="d">D.</string>
    <string name="c">C.</string>
    <string name="b">B.</string>
    <string name="a">A.</string>
    <string name="cauhoi">Đại ngu là quốc hiệu dưới triều đại nào ?</string>
    <string name="socau">1</string>
    <string name="question">Câu hỏi</string>
    <string name="number_score">0</string>
    <string name="score">Điểm:</string>
    <string name="name">HUY NGUYEN</string>
    <string name="capnhat">Cập nhật</string>
    <string name="confirmPass">Xác nhận mật khẩu</string>
    <string name="changepass">Đổi mật khẩu</string>
    <string name="email2">Email</string>
    <string name="tendangnhap">Tên đăng nhập</string>
    <string name="email">Email</string>
    <string name="getpass">Lấy lại mật khẩu</string>
    <string name="diem">Điểm:</string>
    <string name="textLinhVuc">Lĩnh vực</string>
    <string name="textCauHoi">Câu hỏi</string>
</resources>
