<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    tools:context=".ManHinhChinh">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />


    <ImageView
        android:id="@+id/img_diamond"
        android:layout_width="46dp"
        android:layout_height="53dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ten_view"
        app:srcCompat="@drawable/diamond" />

    <TextView
        android:id="@+id/ten_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/name"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.15" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/score"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView29" />

    <TextView
        android:id="@+id/tvSoDiem"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/number_score"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/textView16"
        app:layout_constraintStart_toEndOf="@+id/textView16"
        app:layout_constraintTop_toTopOf="@+id/textView16" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/question"
        android:textColor="#FF5722"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSoDiem"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:id="@+id/tvCauHoiSo"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@drawable/custom_edittext1"
        android:gravity="center"
        android:text="@string/socau"
        android:textColor="#ECE8E8"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/tvSoDiem"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView16"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <TextView
        android:id="@+id/tvNoiDung"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/cauhoi"
        android:textColor="#050505"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvCauHoiSo" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/custom_edittext1"
        android:text="@string/a"
        android:textColor="#FFC107"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvNoiDung" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext1"
        android:text="@string/b"
        android:textColor="#FFC107"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonB"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView22"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext1"
        android:text="@string/c"
        android:textColor="#FFC107"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonC"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/custom_edittext1"
        android:text="@string/d"
        android:textColor="#FFC107"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonD"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toBottomOf="@+id/textView22" />

    <TextView
        android:id="@+id/tvCauA"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/caua"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonA"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4" />

    <TextView
        android:id="@+id/tvCauB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/caub"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonB"
        app:layout_constraintBottom_toBottomOf="@+id/textView21"
        app:layout_constraintEnd_toEndOf="@+id/textView21"
        app:layout_constraintStart_toStartOf="@+id/textView21"
        app:layout_constraintTop_toTopOf="@+id/textView21" />

    <TextView
        android:id="@+id/tvCauC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/cauc"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonC"
        app:layout_constraintBottom_toBottomOf="@+id/textView22"
        app:layout_constraintEnd_toEndOf="@+id/textView22"
        app:layout_constraintStart_toStartOf="@+id/textView22"
        app:layout_constraintTop_toTopOf="@+id/textView22" />

    <TextView
        android:id="@+id/tvCauD"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/caud"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="ChonD"
        app:layout_constraintBottom_toBottomOf="@+id/textView23"
        app:layout_constraintEnd_toEndOf="@+id/textView23"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toTopOf="@+id/textView23"
        app:layout_constraintVertical_bias="0.6" />

    <ImageView
        android:id="@+id/imageView12"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23"
        app:srcCompat="@drawable/doicauhoi_icon" />

    <ImageView
        android:id="@+id/imageView16"
        android:layout_width="85dp"
        android:layout_height="65dp"
        android:onClick="TroGiup5050"
        app:layout_constraintBottom_toBottomOf="@+id/imageView12"
        app:layout_constraintStart_toEndOf="@+id/imageView12"
        app:layout_constraintTop_toTopOf="@+id/imageView12"
        app:layout_constraintVertical_bias="1.0"
        app:srcCompat="@drawable/classsic_b" />

    <ImageView
        android:id="@+id/imageView17"
        android:layout_width="85dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView16"
        app:layout_constraintStart_toEndOf="@+id/imageView16"
        app:layout_constraintTop_toTopOf="@+id/imageView16"
        app:layout_constraintVertical_bias="0.6"
        app:srcCompat="@drawable/classic_a" />

    <ImageView
        android:id="@+id/imageView18"
        android:layout_width="85dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView17"
        app:layout_constraintStart_toEndOf="@+id/imageView17"
        app:layout_constraintTop_toTopOf="@+id/imageView17"
        app:srcCompat="@drawable/classic_c" />

    <ImageView
        android:id="@+id/imageView19"
        android:layout_width="60dp"
        android:layout_height="65dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView18"
        app:layout_constraintStart_toEndOf="@+id/imageView18"
        app:layout_constraintTop_toTopOf="@+id/imageView18"
        app:srcCompat="@drawable/diamond" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/pad"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/imageView19"
        app:layout_constraintStart_toStartOf="@+id/imageView19"
        app:layout_constraintTop_toBottomOf="@+id/imageView19" />

    <TextView
        android:id="@+id/textView29"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="@+id/ten_view"
        app:layout_constraintEnd_toStartOf="@+id/guideline19"
        app:layout_constraintStart_toEndOf="@+id/ten_view"
        app:layout_constraintTop_toTopOf="@+id/ten_view" />

    <ImageView
        android:id="@+id/imageView20"
        android:layout_width="20dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView29"
        app:layout_constraintStart_toStartOf="@+id/textView29"
        app:layout_constraintTop_toTopOf="@+id/textView29"
        app:srcCompat="@drawable/ic_tim1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0." />

    <ImageView
        android:id="@+id/imageView21"
        android:layout_width="20dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView20"
        app:layout_constraintStart_toEndOf="@+id/imageView20"
        app:layout_constraintTop_toTopOf="@+id/imageView20"
        app:srcCompat="@drawable/ic_tim1" />

    <ImageView
        android:id="@+id/imageView22"
        android:layout_width="20dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView21"
        app:layout_constraintStart_toEndOf="@+id/imageView21"
        app:layout_constraintTop_toTopOf="@+id/imageView21"
        app:srcCompat="@drawable/ic_tim1" />

    <ImageView
        android:id="@+id/imageView23"
        android:layout_width="20dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView22"
        app:layout_constraintStart_toEndOf="@+id/imageView22"
        app:layout_constraintTop_toTopOf="@+id/imageView22"
        app:srcCompat="@drawable/ic_tim1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.60" />

    <ImageView
        android:id="@+id/imageView24"
        android:layout_width="20dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView23"
        app:layout_constraintStart_toEndOf="@+id/imageView23"
        app:layout_constraintTop_toTopOf="@+id/imageView23"
        app:srcCompat="@drawable/ic_tim1" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:gravity="center"
        android:text="@string/diamonds"
        android:textColor="#E91E63"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/img_diamond"
        app:layout_constraintEnd_toStartOf="@+id/img_diamond"
        app:layout_constraintTop_toTopOf="@+id/img_diamond" />


</androidx.constraintlayout.widget.ConstraintLayout>