<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tendangnhap_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/tendangnhap"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView9"
        android:autofillHints="" />

    <EditText
        android:id="@+id/matkhau_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_mail_outline_black_24dp"
        android:drawableLeft="@drawable/ic_mail_outline_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tendangnhap_editText"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/tendangnhap_editText"
        app:layout_constraintTop_toBottomOf="@+id/tendangnhap_editText"
        android:autofillHints="" />


    <EditText
        android:id="@+id/matkhau1_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/matkhau_editText"
        app:layout_constraintStart_toStartOf="@+id/matkhau_editText"
        app:layout_constraintTop_toBottomOf="@+id/matkhau_editText" />

    <EditText
        android:id="@+id/matkhau2_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:autofillHints=""
        android:background="@drawable/custom_edittext"
        android:ems="10"
        android:hint="@string/repass"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/matkhau1_editText"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="@+id/matkhau1_editText"
        app:layout_constraintTop_toBottomOf="@+id/matkhau1_editText" />

    <Button
        android:id="@+id/dangky_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@drawable/animation_list_btndangnhap"
        android:text="@string/dangky"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/matkhau2_editText"
        app:layout_constraintStart_toStartOf="@+id/matkhau2_editText"
        app:layout_constraintTop_toBottomOf="@+id/matkhau2_editText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="346dp" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bestchoice"
        android:contentDescription="@string/bestchoice_imd" />

</androidx.constraintlayout.widget.ConstraintLayout>
