<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:padding="12dp"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/tendangnhap_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_person_outline_black_24dp"
        android:drawableLeft="@drawable/ic_person_outline_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/tendangnhap"
        android:inputType="textPersonName"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/imageView9" />

    <EditText
        android:id="@+id/matkhau_editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/custom_edittext"
        android:drawableStart="@drawable/ic_lock_outline_black_24dp"
        android:drawableLeft="@drawable/ic_lock_outline_black_24dp"
        android:drawablePadding="5dp"
        android:ems="10"
        android:hint="@string/matkhau"
        android:inputType="textPassword"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tendangnhap_editText"
        app:layout_constraintStart_toStartOf="@+id/tendangnhap_editText"
        app:layout_constraintTop_toBottomOf="@+id/tendangnhap_editText" />

    <Button
        android:id="@+id/dangnhap_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:background="@drawable/animation_list_btndangnhap"
        android:text="@string/btn_dangnhap"
        android:textColor="@android:color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        android:onClick="xuly_dangnhap"
        app:layout_constraintEnd_toEndOf="@+id/matkhau_editText"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/matkhau_editText"
        app:layout_constraintTop_toBottomOf="@+id/matkhau_editText" />

    <com.facebook.login.widget.LoginButton
        android:id="@+id/login_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="@+id/dangnhap_button"
        app:layout_constraintStart_toStartOf="@+id/dangnhap_button"
        app:layout_constraintTop_toBottomOf="@+id/dangnhap_button" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="346dp" />

    <TextView
        android:id="@+id/xephang_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/quenmk"
        android:textColor="#F3EFEE"
        android:textSize="24sp"
        android:onClick="xuly_quenmk"
        app:layout_constraintBottom_toTopOf="@+id/dangnhap_button"
        app:layout_constraintEnd_toEndOf="@+id/matkhau_editText"
        app:layout_constraintTop_toBottomOf="@+id/matkhau_editText" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:text="@string/createacc"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        android:onClick="xuly_dangky"
        app:layout_constraintEnd_toEndOf="@+id/login_button"
        app:layout_constraintStart_toStartOf="@+id/login_button"
        app:layout_constraintTop_toBottomOf="@+id/login_button" />

    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintEnd_toStartOf="@+id/guideline4"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/bestchoice" />

</androidx.constraintlayout.widget.ConstraintLayout>
